# faterunner

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/faterunner/: __init__.py  __main__.py  exceptions.py  parsers.py
