[project]
name = 'faterunner'
readme = 'README.md'
license = 'MIT'
dynamic = ['version']

[project.optional-dependencies]
dev = ['ruff']

[project.scripts]
fate = 'faterunner.__main__:cli'

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[tool.faterunner.targets]
check = ['ruff check .', 'ruff format --check .']
format = ['ruff check --fix .', 'ruff format .']

[tool.hatch.version]
path = 'src/faterunner/__version__.py'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
